# verwandlung

./: .gitignore  README.md
consumer/: Cargo.toml
consumer/src/: main.rs
kafka/: docker-compose.yml
producer/: Gemfile  producer.rb
